<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:gravity="center_vertical"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/settings"
            android:textColor="@color/title_settings"
            android:textSize="@dimen/main_text_size" />

    </FrameLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:theme="@style/settingsSwitch"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_gravity="start"
        android:layout_marginHorizontal="@dimen/margin_size"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/night_theme"
        android:textColor="@color/list_settings"
        android:textSize="@dimen/settings_text_size" />

    <TextView
        android:id="@+id/share_button"
        style="@style/settingsActivityTextView"
        android:text="@string/share"
        app:drawableEndCompat="@drawable/share"
        app:iconSize="@dimen/icon_size" />

    <TextView
        android:id="@+id/support_button"
        style="@style/settingsActivityTextView"
        android:text="@string/write_support"
        app:drawableEndCompat="@drawable/support"
        app:iconSize="@dimen/icon_size" />


    <TextView
        android:id="@+id/terms_of_use_button"
        style="@style/settingsActivityTextView"
        android:text="@string/terms_of_use"
        app:drawableEndCompat="@drawable/arrow"
        app:iconSize="@dimen/icon_size" />
</LinearLayout>