<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_size"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/main_text_size" />

    <Button
        android:id="@+id/search"
        style="@style/mainActivityButton"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="@dimen/margin_size"
        android:text="@string/search"
        app:cornerRadius="@dimen/margin_size"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/main_icon_padding"
        app:iconSize="@dimen/icon_size"
        app:iconTint="@color/black_1" />

    <Button
        android:id="@+id/library"
        style="@style/mainActivityButton"
        android:layout_marginBottom="@dimen/margin_size"
        android:text="@string/library"
        app:cornerRadius="@dimen/margin_size"
        app:icon="@drawable/library"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/main_icon_padding"
        app:iconSize="@dimen/icon_size"
        app:iconTint="@color/black_1" />

    <Button
        android:id="@+id/settings"
        style="@style/mainActivityButton"
        android:layout_marginBottom="28dp"
        android:text="@string/settings"
        app:cornerRadius="@dimen/margin_size"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/main_icon_padding"
        app:iconSize="@dimen/icon_size"
        app:iconTint="@color/black_1" />

</LinearLayout>