<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            app:icon="@drawable/arrow_back"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/settings_icon_padding"
            app:iconSize="@dimen/icon_size"
            app:iconTint="@color/black_1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/black_1"
            android:textSize="@dimen/main_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="320dp"
            android:layout_height="61dp"
            android:layout_marginLeft="@dimen/margin_size"
            android:paddingTop="21dp"
            android:text="@string/night_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />

        <Switch
            android:id="@+id/button6"
            android:layout_width="56dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/white"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>


    <TextView
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:backgroundTint="@color/white"
        android:paddingLeft="@dimen/margin_size"
        android:paddingTop="21dp"
        android:paddingRight="18dp"
        android:paddingBottom="18dp"
        android:text="@string/share"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_text_size"
        app:drawableEndCompat="@drawable/share"
        app:iconSize="@dimen/icon_size"
        app:iconTint="@color/grey" />

    <TextView
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:backgroundTint="@color/white"
        android:paddingLeft="@dimen/margin_size"
        android:paddingTop="21dp"
        android:paddingRight="18dp"
        android:paddingBottom="18dp"
        android:text="@string/right_support"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_text_size"
        app:drawableEndCompat="@drawable/support"
        app:iconSize="@dimen/icon_size"
        app:iconTint="@color/grey" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:backgroundTint="@color/white"
        android:paddingLeft="@dimen/margin_size"
        android:paddingTop="21dp"
        android:paddingRight="18dp"
        android:paddingBottom="18dp"
        android:text="@string/terms_of_use"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_text_size"
        app:drawableEndCompat="@drawable/arrow"
        app:iconSize="@dimen/icon_size"
        app:iconTint="@color/grey" />
</LinearLayout>